<resources>
    <string name="app_name">latihan4_dashboard</string>
    <string name="rp_299_999">Rp. 299.999</string>
    <string name="takeaway">Takeaway</string>
    <string name="wallet">Wallet</string>
    <string name="gift">Gift</string>
    <string name="barang">Barang</string>
    <string name="lokasi">Lokasi</string>
    <string name="hamper">Hamper</string>
    <string name="coffe">Coffe</string>
    <string name="ayam_amp_waffle"><![CDATA[Ayam & Waffle]]></string>
    <string name="ayam_goreng">Ayam Goreng</string>
    <string name="coin">coin</string>
    <string name="kopi">Kopi</string>
    <string name="search">search</string>
    <string name="user">user</string>
    <string name="welcome_to_application">Welcome to Application</string>
    <string name="you_have_a_notification">You Have a Notification</string>
    <string name="your_cart_full">Your Cart Full</string>
    <string name="person">Person</string>
    <string name="digital_marketing">Digital Marketing</string>
    <string name="menu">Menu:</string>
    <string name="silahkan_isi_menu_pilihan">Silahkan isi menu pilihan</string>
    <string name="klik_bayar">Klik Bayar</string>
</resources>