<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/welcome_to_application"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        tools:ignore="MissingConstraints" />
    
    <ImageView
        android:id="@+id/wallet"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/custom4"
        android:src="@drawable/wallet"
        android:contentDescription="@string/wallet"
    />

    <TextView
        android:id="@+id/txtWallet"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/wallet"
        android:text="@string/wallet"
        android:textColor="@color/black"
        android:textStyle="bold"
    />

    <ImageView
        android:id="@+id/waffle"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="270dp"
        android:layout_toEndOf="@+id/wallet"
        android:background="@drawable/custom4"
        android:src="@drawable/chicken_and_waffle"
        android:contentDescription="@string/ayam_amp_waffle"
    />

    <TextView
        android:id="@+id/txtChickenAndWaffle"
        android:layout_width="95dp"
        android:layout_height="25dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/txtWallet"
        android:layout_below="@+id/waffle"
        android:text="@string/ayam_amp_waffle"
        android:textColor="@color/black"
        android:textStyle="bold"
    />

    <ImageView
        android:id="@+id/hamper"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="270dp"
        android:layout_toEndOf="@+id/waffle"
        android:background="@drawable/custom4"
        android:src="@drawable/hamper"
        android:contentDescription="@string/hamper"
    />

    <TextView
        android:id="@+id/txtGift"
        android:layout_width="30dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/txtHamper"
        android:layout_below="@+id/gift"
        android:text="@string/gift"
        android:textColor="@color/black"
        android:textStyle="bold"
    />

    <ImageView
        android:id="@+id/gift"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="270dp"
        android:layout_toEndOf="@+id/hamper"
        android:background="@drawable/custom4"
        android:src="@drawable/gift"
        android:contentDescription="@string/gift"
    />

    <TextView
        android:id="@+id/txtHamper"
        android:layout_width="55dp"
        android:layout_height="25dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/txtChickenAndWaffle"
        android:layout_below="@+id/hamper"
        android:text="@string/hamper"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/fried_chicken"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="390dp"
        android:background="@drawable/custom4"
        android:src="@drawable/fried_chicken"
        android:contentDescription="@string/ayam_goreng"
    />

    <TextView
        android:id="@+id/txtFriedChicken"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/fried_chicken"
        android:text="@string/ayam_goreng"
        android:textColor="@color/black"
        android:textStyle="bold"
    />

    <ImageView
        android:id="@+id/coffe"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="390dp"
        android:layout_toEndOf="@+id/fried_chicken"
        android:background="@drawable/custom4"
        android:src="@drawable/coffe"
        android:contentDescription="@string/coffe"
    />

    <TextView
        android:id="@+id/txtCoffe"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/txtFriedChicken"
        android:layout_below="@+id/coffe"
        android:text="@string/kopi"
        android:textColor="@color/black"
        android:textStyle="bold"
    />

    <ImageView
        android:id="@+id/location"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="390dp"
        android:layout_toEndOf="@+id/coffe"
        android:background="@drawable/custom4"
        android:src="@drawable/location"
        android:contentDescription="@string/lokasi"
    />

    <TextView
        android:id="@+id/txtLokasi"
        android:layout_width="45dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/txtCoffe"
        android:layout_below="@+id/location"
        android:text="@string/lokasi"
        android:textColor="@color/black"
        android:textStyle="bold"
    />

    <ImageView
        android:id="@+id/basket"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="390dp"
        android:layout_toEndOf="@+id/location"
        android:background="@drawable/custom4"
        android:src="@drawable/basket"
        android:contentDescription="@string/barang"
    />

    <TextView
        android:id="@+id/txtBarang"
        android:layout_width="48dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/txtLokasi"
        android:layout_below="@+id/basket"
        android:text="@string/barang"
        android:textColor="@color/black"
        android:textStyle="bold"
    />

</RelativeLayout>