<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/person"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        />

    <ImageView
        android:id="@+id/wallet"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="270dp"
        android:src="@drawable/user"
        android:contentDescription="@string/wallet"
        />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginStart="120dp"
        android:text="@string/person"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/txtJabatan"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:layout_marginStart="120dp"
        android:text="@string/digital_marketing"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        />

</RelativeLayout>